[project]
name = "diffusions"
version = "0.1.0"
description = "Affine Diffusions. Simulation and estimation."
authors = [{ name = "Stanislav Khrapov", email = "khrapovs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
